VSE: Strip attached to transition effect, when cut outside transition, creates a mess of strips #90407

Closed
opened 2021-08-03 14:29:14 +02:00 by David Salvo · 13 comments

System Information
Operating system: Linux-5.4.0-80-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-02 19:45, hash: efd7c95bb2
Caused by d373b43f07.

Short description of error
A strip that is part of a transition effect, when cut outside the transition, will result in a mess of basically all strips involved, with strange duplications and stretches.

Exact steps for others to reproduce the error
blender bug - transition cut.mp4

bug__transition-cut.blend

**System Information** Operating system: Linux-5.4.0-80-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-02 19:45, hash: `efd7c95bb2` Caused by d373b43f07. **Short description of error** A strip that is part of a transition effect, when cut outside the transition, will result in a mess of basically all strips involved, with strange duplications and stretches. **Exact steps for others to reproduce the error** [blender bug - transition cut.mp4](https://archive.blender.org/developer/F10262776/blender_bug_-_transition_cut.mp4) [bug__transition-cut.blend](https://archive.blender.org/developer/F10262764/bug__transition-cut.blend)
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-08-03 14:57:08 +02:00
Member

Can confirm, will check.

Can confirm, will check.
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Caused by d373b43f07.
@iss: mind checking?

Caused by d373b43f07. @iss: mind checking?
Philipp Oeser removed their assignment 2021-08-03 15:58:49 +02:00

Technically this never worked properly, but arguably d373b43f07 made it a bit worse. Got some initial fix ready, will continue tomorrow to cover more edge cases.

Technically this never worked properly, but arguably d373b43f07 made it a bit worse. Got some initial fix ready, will continue tomorrow to cover more edge cases.
Author

In #90407#1201288, @iss wrote:
Technically this never worked properly, but arguably d373b43f07 made it a bit worse. Got some initial fix ready, will continue tomorrow to cover more edge cases.

Thanks so much (everyone) for the quick responses to all bug reports! I've returned to editing as a creative outlet after years away, and am relearning the blender VSE. First thing I did was fully customize my hotkeys which I never did last time (typical vim user now ha!), and in this process of trying to perfect my workflow, I have fiddled with almost every VSE function while working on a family project. I'm very sensitive to things that don't work properly, so will be reporting anything I find, as I find it.

Again, really appreciate the responsive developers here. I've donated monthly to Blender for years as a VSE user as I love the power and the interface, and love seeing its primary 3D purpose excel as well... but having lots of small bugs definitely lowers user confidence in the experience, so I'm happy to do my part to report them!

I think there are some anomalies with other strip cuts. I see d373b43f07 that you mentioned, though it's meta strips in particular I've always found so unreliable that I stopped using them - and it seems this may still be the case. I will try to isolate some cases of this eventually, as it doesn't seem there's many reports out there.

Good luck with completing this fix, hopefully it will fix a few other cases as well!

> In #90407#1201288, @iss wrote: > Technically this never worked properly, but arguably d373b43f07 made it a bit worse. Got some initial fix ready, will continue tomorrow to cover more edge cases. Thanks so much (everyone) for the quick responses to all bug reports! I've returned to editing as a creative outlet after years away, and am relearning the blender VSE. First thing I did was fully customize my hotkeys which I never did last time (typical vim user now ha!), and in this process of trying to perfect my workflow, I have fiddled with almost every VSE function while working on a family project. I'm very sensitive to things that don't work properly, so will be reporting anything I find, as I find it. Again, really appreciate the responsive developers here. I've donated monthly to Blender for years as a VSE user as I love the power and the interface, and love seeing its primary 3D purpose excel as well... but having lots of small bugs definitely lowers user confidence in the experience, so I'm happy to do my part to report them! I think there are some anomalies with other strip cuts. I see d373b43f07 that you mentioned, though it's meta strips in particular I've always found so unreliable that I stopped using them - and it seems this may still be the case. I will try to isolate some cases of this eventually, as it doesn't seem there's many reports out there. Good luck with completing this fix, hopefully it will fix a few other cases as well!

Added subscriber: @tintwotin

Added subscriber: @tintwotin

@iss Additional unused transition improvements: D10207

@iss Additional unused transition improvements: [D10207](https://archive.blender.org/developer/D10207)
Author

In #90407#1201425, @tintwotin wrote:
@iss Additional unused transition improvements: D10207

Some great ideas here Peter, it's a shame it was abandoned. Hopefully all the small annoying issues can be chipped away until few remain. Fancy effects in editing are rarely useful, but stable core basics are. Also any potential improvements to promote quick/intelligent workflow seems to be low-hanging fruit that should always be considered.

> In #90407#1201425, @tintwotin wrote: > @iss Additional unused transition improvements: [D10207](https://archive.blender.org/developer/D10207) Some great ideas here Peter, it's a shame it was abandoned. Hopefully all the small annoying issues can be chipped away until few remain. Fancy effects in editing are rarely useful, but stable core basics are. Also any potential improvements to promote quick/intelligent workflow seems to be low-hanging fruit that should always be considered.

This issue was referenced by 709ce44617

This issue was referenced by 709ce44617bf8c41b5bfe9a93aa58e9140323428

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-08-24 00:58:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90407
No description provided.